modified buttons to fix contrast and focus

--- a/style.css
+++ b/style.css
@@ -289,7 +289,7 @@ body {
     background-color: transparent;
     border: 0.0625rem;
     border-style: solid;
-    border-color: #4141bd;
+    border-color: #000000;
     border-radius: 0.5rem;
     width: 8.25rem;
     height: 2.5rem;
@@ -329,7 +329,7 @@ body {
     background-color: transparent;
     border: 0.0625rem;
     border-style: solid;
-    border-color: #4141bd;
+    border-color: #030307;
     border-radius: 0.5rem;
     width: 11.25rem;
     height: 2.5rem;
@@ -793,10 +793,11 @@ textarea {
         width: 10.75rem;
         height: 3rem;
         color: #000000;
+        font: size 17px;
         background: #fff;
         border-radius: 0.5rem;
         border-style: solid;
-        border-color: #4f5dec;
+        border-color: #000000;
         align-content: center;
         margin-top: 5%;
     }
@@ -1029,7 +1030,7 @@ textarea {
         background-color: transparent;
         border: 0.0625rem;
         border-style: solid;
-        border-color: #ffffff;
+        border-color: #061b92;
         border-radius: 0.5rem;
         width: 11.25rem;
         height: 2.5rem;
